// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngestionConsumer error handling should handle explicitly non retriable errors by sending to DLQ 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_dlq_test",
    "value": {
      "data": "{"distinct_id":"user-1","uuid":"<REPLACED-UUID-1>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "user-1",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow should allow some events to pass 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-1>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-2>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow should emit to overflow if token and distinct_id are overflowed 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-1>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general should process a standard event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer transformations transformation chain should chain transformations in correct order and filter bot events 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "93d5a45faf75a425ac8e4e053ebd7ff29a708196d01446cbebdf7bab0469fbb3",
      "elements_chain": "",
      "event": "chain_button_click",
      "person_created_at": "2024-01-01 12:30:45",
      "person_id": "<REPLACED-UUID-15>",
      "person_mode": "full",
      "person_properties": "{"$os":"Windows 10","$browser":"chrome","$pathname":"/en/chain/stats","utm_medium":"cpc","utm_source":"email","$initial_os":"Windows 10","$current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","$device_type":"Desktop","utm_campaign":"chain2024","$geoip_latitude":59.3974,"$browser_version":"120.0.0","$geoip_city_name":"Karlstad","$geoip_longitude":13.5055,"$geoip_time_zone":"Europe/Stockholm","$initial_browser":"chrome","$initial_pathname":"/en/chain/stats","$geoip_postal_code":"652 25","initial_utm_medium":"cpc","initial_utm_source":"email","$creator_event_uuid":"<REPLACED-UUID-16>","$geoip_country_code":"SE","$geoip_country_name":"Sweden","$initial_utm_medium":"cpc","$initial_utm_source":"email","$initial_current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","$initial_device_type":"Desktop","initial_utm_campaign":"chain2024","$geoip_continent_code":"EU","$geoip_continent_name":"Europe","$initial_utm_campaign":"chain2024","$geoip_accuracy_radius":20,"$initial_geoip_latitude":59.3974,"$initial_browser_version":"120.0.0","$initial_geoip_city_name":"Karlstad","$initial_geoip_longitude":13.5055,"$initial_geoip_time_zone":"Europe/Stockholm","$geoip_subdivision_1_code":"S","$geoip_subdivision_1_name":"Värmland County","$initial_geoip_postal_code":"652 25","$initial_geoip_country_code":"SE","$initial_geoip_country_name":"Sweden","$initial_geoip_continent_code":"EU","$initial_geoip_continent_name":"Europe","$initial_geoip_accuracy_radius":20,"$initial_geoip_subdivision_1_code":"S","$initial_geoip_subdivision_1_name":"Värmland County"}",
      "project_id": 2,
      "properties": "{"$ip":"89.160.20.0","$pathname":"/en/chain/stats","app_version":"2.1.0-alpha+build.123","$current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","nested":{"otherValue":"should-remain"},"$set":{"$pathname":"/en/chain/stats","$current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","utm_source":"email","utm_campaign":"chain2024","utm_medium":"cpc","$device_type":"Desktop","$browser":"chrome","$browser_version":"120.0.0","$os":"Windows 10","$geoip_city_name":"Karlstad","$geoip_subdivision_1_name":"Värmland County","$geoip_subdivision_1_code":"S","$geoip_country_name":"Sweden","$geoip_country_code":"SE","$geoip_continent_name":"Europe","$geoip_continent_code":"EU","$geoip_postal_code":"652 25","$geoip_latitude":59.3974,"$geoip_longitude":13.5055,"$geoip_accuracy_radius":20,"$geoip_time_zone":"Europe/Stockholm"},"$set_once":{"$initial_pathname":"/en/chain/stats","$initial_current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","$initial_utm_source":"email","$initial_utm_campaign":"chain2024","$initial_utm_medium":"cpc","$initial_device_type":"Desktop","$initial_browser":"chrome","$initial_browser_version":"120.0.0","$initial_os":"Windows 10","$initial_geoip_city_name":"Karlstad","$initial_geoip_subdivision_1_name":"Värmland County","$initial_geoip_subdivision_1_code":"S","$initial_geoip_country_name":"Sweden","$initial_geoip_country_code":"SE","$initial_geoip_continent_name":"Europe","$initial_geoip_continent_code":"EU","$initial_geoip_postal_code":"652 25","$initial_geoip_latitude":59.3974,"$initial_geoip_longitude":13.5055,"$initial_geoip_accuracy_radius":20,"$initial_geoip_time_zone":"Europe/Stockholm","initial_utm_source":"email","initial_utm_campaign":"chain2024","initial_utm_medium":"cpc"},"$geoip_city_name":"4b05bb202ce94de82553f0e697be6400fef970b98d9f83550c6b29ec542e8d8e","$geoip_country_name":"bafd04fa615d500d269c5f5b020896686c11bcd310581afcc25b0050cf7c4e45","$geoip_country_code":"SE","$geoip_continent_name":"Europe","$geoip_continent_code":"EU","$geoip_accuracy_radius":20,"$geoip_time_zone":"Europe/Stockholm","$geoip_subdivision_1_code":"S","$geoip_subdivision_1_name":"Värmland County","detected_language":"en","clean_path":"/chain/stats","utm_source":"email","utm_campaign":"chain2024","utm_medium":"cpc","$device":"","$device_type":"Desktop","$browser":"chrome","$browser_version":"120.0.0","$os":"Windows 10","$browser_type":"browser","app_version__major":2,"app_version__minor":1,"app_version__patch":0,"app_version__preRelease":"alpha","app_version__build":"build.123","day_of_the_week":"Monday","day":"01","month":"01","year":"2024","hour":13,"minute":30,"$transformations_succeeded":["Filter Bot Events (<REPLACED-UUID-1>)","Filter Out Plugin (<REPLACED-UUID-2>)","GeoIP (<REPLACED-UUID-3>)","Remove Null Properties (<REPLACED-UUID-4>)","URL Parameter Masking (<REPLACED-UUID-5>)","Language URL stripper (<REPLACED-UUID-6>)","URL parameters to event properties (<REPLACED-UUID-7>)","User Agent Populator (<REPLACED-UUID-8>)","PII Data Hashing (<REPLACED-UUID-9>)","IP Anonymization (<REPLACED-UUID-10>)","Property Filter (<REPLACED-UUID-11>)","SemVer Flattener (<REPLACED-UUID-12>)","Taxonomy (<REPLACED-UUID-13>)","Timestamp Parser (<REPLACED-UUID-14>)"],"$transformations_failed":[]}",
      "team_id": 2,
      "timestamp": "2024-01-01 12:30:45.000",
      "uuid": "<REPLACED-UUID>",
    },
  },
  {
    "key": "<REPLACED-UUID-16>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-16>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-16>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-17>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-17>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-17>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-17>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-17>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 21862 bytes. Ops: 347. Event: 'https://example.com?email=chain@test.com&password=secret123'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-17>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-17>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-17>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-18>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-18>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-18>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-18>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 21835 bytes. Ops: 4306. Event: 'https://example.com/filtered-out/chain'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-18>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-18>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-18>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-19>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-19>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-19>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-19>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 21869 bytes. Ops: 4306. Event: 'https://example.com/chain?source=email&campaign=chain2024&medium=cpc'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-19>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-19>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-19>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-19>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-20>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-20>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-20>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-20>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-20>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 8516 bytes. Ops: 16. Event: 'https://example.com/chain?source=email&campaign=chain2024&medium=cpc'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-20>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-20>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-20>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-21>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-21>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-21>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-21>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 8221 bytes. Ops: 514. Event: 'https://example.com/chain?source=email&campaign=chain2024&medium=cpc'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-21>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-21>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-21>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-21>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-21>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-22>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-22>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-22>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-22>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-22>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 13010 bytes. Ops: 296. Event: 'https://example.com/chain?source=email&campaign=chain2024&medium=cpc'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-22>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-22>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-22>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-23>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-23>",
      "message": "Executing function",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-23>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-23>",
      "level": "debug",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-23>",
      "message": "Function completed in <timing>ms. Sync: 0ms. Mem: 6784 bytes. Ops: 148. Event: 'https://example.com/chain?source=email&campaign=chain2024&medium=cpc'",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-23>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-23>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-23>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-23>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-23>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-24>",
      "level": "info",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-24>",
      "message": "found candidate property: , app_version,  matches , 2.1.0-alpha+build.123",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-24>",
    "topic": "log_entries_test",
    "value": {
      "instance_id": "<REPLACED-UUID-24>",
      "level": "info",
      "log_source": "hog_function",
      "log_source_id": "<REPLACED-UUID-24>",
      "message": "found candidate property: , lib_version,  matches , ",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.001",
    },
  },
  {
    "key": "<REPLACED-UUID-24>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-24>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": "<REPLACED-UUID-24>",
    "topic": "clickhouse_app_metrics2_test",
    "value": {
      "app_source": "hog_function",
      "app_source_id": "<REPLACED-UUID-24>",
      "count": 1,
      "metric_kind": "success",
      "metric_name": "succeeded",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2024-01-01 12:30:45",
      "id": "<REPLACED-UUID-24>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$os":"Windows 10","$browser":"chrome","$pathname":"/en/chain/stats","utm_medium":"cpc","utm_source":"email","$initial_os":"Windows 10","$current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","$device_type":"Desktop","utm_campaign":"chain2024","$geoip_latitude":59.3974,"$browser_version":"120.0.0","$geoip_city_name":"Karlstad","$geoip_longitude":13.5055,"$geoip_time_zone":"Europe/Stockholm","$initial_browser":"chrome","$initial_pathname":"/en/chain/stats","$geoip_postal_code":"652 25","initial_utm_medium":"cpc","initial_utm_source":"email","$creator_event_uuid":"<REPLACED-UUID-24>","$geoip_country_code":"SE","$geoip_country_name":"Sweden","$initial_utm_medium":"cpc","$initial_utm_source":"email","$initial_current_url":"https://example.com/chain?source=email&campaign=chain2024&medium=cpc","$initial_device_type":"Desktop","initial_utm_campaign":"chain2024","$geoip_continent_code":"EU","$geoip_continent_name":"Europe","$initial_utm_campaign":"chain2024","$geoip_accuracy_radius":20,"$initial_geoip_latitude":59.3974,"$initial_browser_version":"120.0.0","$initial_geoip_city_name":"Karlstad","$initial_geoip_longitude":13.5055,"$initial_geoip_time_zone":"Europe/Stockholm","$geoip_subdivision_1_code":"S","$geoip_subdivision_1_name":"Värmland County","$initial_geoip_postal_code":"652 25","$initial_geoip_country_code":"SE","$initial_geoip_country_name":"Sweden","$initial_geoip_continent_code":"EU","$initial_geoip_continent_name":"Europe","$initial_geoip_accuracy_radius":20,"$initial_geoip_subdivision_1_code":"S","$initial_geoip_subdivision_1_name":"Värmland County"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "93d5a45faf75a425ac8e4e053ebd7ff29a708196d01446cbebdf7bab0469fbb3",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-24>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing $identify event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$set":{"$email":"test@test.com"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing ai event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$ai_generation",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$ai_model":"gpt-4","$ai_provider":"openai","$ai_input_tokens":100,"$ai_output_tokens":50,"$ip":"127.0.0.1","$ai_input_cost_usd":0.003,"$ai_output_cost_usd":0.003,"$ai_total_cost_usd":0.006}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing client ingestion warning 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_ingestion_warnings_test",
    "value": {
      "details": "{"eventUuid":"<REPLACED-UUID-0>","event":"$$client_ingestion_warning","distinctId":"user-1","message":"test"}",
      "source": "plugin-server",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "type": "client_ingestion_warning",
    },
  },
]
`;

exports[`IngestionConsumer typical event processing event with common distinct_id that gets dropped 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "distinct_id",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "distinct_id",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing forced person upgrade 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "1970-01-01 00:00:05",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "propertyless",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"email":"test@example.com","$creator_event_uuid":"<REPLACED-UUID-3>"}",
      "project_id": 2,
      "properties": "{"$set":{"email":"test@example.com"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-3>",
    },
  },
  {
    "key": "<REPLACED-UUID-3>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-4>",
      "person_mode": "force_upgrade",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:02:00.000",
      "uuid": "<REPLACED-UUID-4>",
    },
  },
  {
    "key": "<REPLACED-UUID-4>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-5>",
      "person_mode": "full",
      "person_properties": "{"email":"test@example.com","update3":"3","$creator_event_uuid":"<REPLACED-UUID-5>"}",
      "project_id": 2,
      "properties": "{"$set":{"update3":"3"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:03:00.000",
      "uuid": "<REPLACED-UUID-5>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"email":"test@example.com","$creator_event_uuid":"<REPLACED-UUID-5>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-5>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"email":"test@example.com","update3":"3","$creator_event_uuid":"<REPLACED-UUID-5>"}",
      "team_id": 2,
      "version": 1,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing groups 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$groups":{"a":"group-a","b":"group-b","c":"group-c","d":"group-d","e":"group-e","f":"group-f"},"$ip":"127.0.0.1","$group_0":"group-a","$group_1":"group-b","$group_2":"group-c","$group_3":"group-d","$group_4":"group-e"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$groupidentify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-3>"}",
      "project_id": 2,
      "properties": "{"$group_type":"a","$group_key":"group-a","$group_set":{"id":"group-a","foo":"bar"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-3>",
    },
  },
  {
    "key": "<REPLACED-UUID-3>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$groupidentify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-4>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "project_id": 2,
      "properties": "{"$group_type":"f","$group_key":"group-f","$group_set":{"id":"group-f","foo":"bar"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-4>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-4>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-4>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_groups_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "group_key": "group-a",
      "group_properties": "{"id":"group-a","foo":"bar"}",
      "group_type_index": 0,
      "team_id": 2,
      "version": 1,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing malformed event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing malformed person information 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "distinct-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"0":"I","1":"N","2":"V","3":"A","4":"L","5":"I","6":"D","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "project_id": 2,
      "properties": "{"$set":"INVALID","$unset":[[[["definitel invalid"]]]],"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"0":"I","1":"N","2":"V","3":"A","4":"L","5":"I","6":"D","$creator_event_uuid":"<REPLACED-UUID-2>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "distinct-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing multiple events 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "anonymous-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"https://example.com/page1","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"https://example.com/page1"}",
      "project_id": 2,
      "properties": "{"$current_url":"https://example.com/page1","$ip":"127.0.0.1","$set":{"$current_url":"https://example.com/page1"},"$set_once":{"$initial_current_url":"https://example.com/page1"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "identified-id-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "project_id": 2,
      "properties": "{"$set":{"$email":"test@test.com"},"$anonymous_distinct_id":"anonymous-id-1","$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-3>",
    },
  },
  {
    "key": "<REPLACED-UUID-4>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "identified-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-5>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$current_url":"https://example.com/page2","$creator_event_uuid":"<REPLACED-UUID-5>","$initial_current_url":"https://example.com/page2"}",
      "project_id": 2,
      "properties": "{"$current_url":"https://example.com/page2","$ip":"127.0.0.1","$set":{"$current_url":"https://example.com/page2"},"$set_once":{"$initial_current_url":"https://example.com/page2"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-5>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"https://example.com/page1","$creator_event_uuid":"<REPLACED-UUID-5>","$initial_current_url":"https://example.com/page1"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "anonymous-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-5>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-5>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "identified-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-5>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$current_url":"https://example.com/page2","$creator_event_uuid":"<REPLACED-UUID-5>","$initial_current_url":"https://example.com/page2"}",
      "team_id": 2,
      "version": 1,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing normal event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-2>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing person processing off 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "1970-01-01 00:00:05",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "propertyless",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
]
`;

exports[`IngestionConsumer typical event processing person property merging via alias 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "<REPLACED-UUID-1>",
      "elements_chain": "",
      "event": "custom event",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-2>",
      "person_mode": "full",
      "person_properties": "{"k":"v","$creator_event_uuid":"<REPLACED-UUID-3>"}",
      "project_id": 2,
      "properties": "{"$set":{"k":"v"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": "<REPLACED-UUID-3>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "<REPLACED-UUID-4>",
      "elements_chain": "",
      "event": "custom event",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-5>",
      "person_mode": "full",
      "person_properties": "{"j":"w","$creator_event_uuid":"<REPLACED-UUID-6>"}",
      "project_id": 2,
      "properties": "{"$set":{"j":"w"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-4>",
    },
  },
  {
    "key": "<REPLACED-UUID-6>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "<REPLACED-UUID-7>",
      "elements_chain": "",
      "event": "$create_alias",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-7>",
      "person_mode": "full",
      "person_properties": "{"j":"w","k":"v","l":"x","$creator_event_uuid":"<REPLACED-UUID-7>"}",
      "project_id": 2,
      "properties": "{"alias":"<REPLACED-UUID-7>","$set":{"l":"x"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-7>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-7>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"k":"v","$creator_event_uuid":"<REPLACED-UUID-7>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "<REPLACED-UUID-7>",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-7>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-7>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"j":"w","$creator_event_uuid":"<REPLACED-UUID-7>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "<REPLACED-UUID-7>",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-7>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-7>",
      "is_deleted": 0,
      "is_identified": 1,
      "properties": "{"j":"w","k":"v","l":"x","$creator_event_uuid":"<REPLACED-UUID-7>"}",
      "team_id": 2,
      "version": 1,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "<REPLACED-UUID-7>",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-7>",
      "team_id": 2,
      "version": 1,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-7>",
      "is_deleted": 1,
      "is_identified": 0,
      "properties": "{"k":"v","$creator_event_uuid":"<REPLACED-UUID-7>"}",
      "team_id": 2,
      "version": 100,
    },
  },
]
`;
